code/k8s/011/loki-stack/loki-ingress.yaml
apiVersion: networking.k8s.io/v1 # 指定 API 版本
kind: Ingress
metadata:
  name: grafana-ui
  namespace: loki
  labels:
    k8s-app: grafana
spec:
  ingressClassName: nginx       # 指定此 Ingress 资源由名称为 nginx 的 IngressClass 处理
  rules:
    - host: loki.grafana.com    # 指定此规则适用于请求的 HTTP 主机头（Host Header）为 loki.grafana.com 的流量。客户端必须通过该域名访问
      http:
        paths:
          - path: /             # 指定匹配的 URL 路径为 /，即根路径,表示匹配所有以 / 开头的请求
            pathType: Prefix    # 定义路径匹配的类型为 Prefix，表示匹配以指定路径（/) 开头的所有请求
            backend:
              service:
                name: loki-grafana   # 指定后端服务的名称为 nginx-svc.（必须存在于同一命名空间，或通过 <namespace>/<service-name> 跨命名空间引用）
                port:
                  number: 80  # 指定目标 Service 的端口为 80
